# on-this-day-e-ink

./: .env.example  .gitignore  PLAN-enhancements.md  README.md  extract_categorised_events.py  pyproject.toml  run_manual_event.py
src/on_this_day/: __main__.py  composer.py  config.py  discord.py  fetcher.py  generator.py  poster.py  selector.py  summariser.py
tests/: test_composer.py  test_config.py  test_fetcher.py  test_generator.py  test_poster.py  test_selector.py  test_summariser.py
